[package]
name = "ali-oss-rs"
version = "0.2.1"
edition = "2021"
license = "MIT"
rust-version = "1.80.1"
description = "阿里云对象存储 Rust SDK。 Aliyun OSS SDK for Rust"
authors = ["Yuan YQ <yuqiang.yuan@163.com>"]
repository = "https://github.com/yuqiang-yuan/ali-oss-rs"
documentation = "https://docs.rs/ali-oss-rs"
keywords = ["aliyun", "oss", "ali"]
categories = ["api-bindings", "web-programming"]

[package.metadata.docs.rs]
# Enable all features during documentation build
all-features = true

[dependencies]
async-trait = "0.1.86"
base64 = "0.22.1"
bytes = "^1"
chrono = "0.4.39"
futures = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
log = "0.4.25"
md5 = "0.7.0"
mime_guess = "2.0.5"
quick-xml = { version = "0.37.2" }
regex = "1.11.1"
# ✅ reqwest 使用 rustls 版本
reqwest = { version = "0.12.12", default-features = false, features = ["stream", "rustls-tls-webpki-roots"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
url = "2.5.4"
urlencoding = "2.1.3"

[dev-dependencies]
dotenvy = "0.15.7"
serde_yaml = "0.9.34"
simple_logger = "5.0.0"
uuid = { version = "1.4.1", features = ["v4"] }

[features]
# ✅ 默认不再启用 native-tls，而启用 rust-tls
default = ["async", "rust-tls"]

# ✅ 异步请求
async = []

# ✅ 同步请求支持（可选）
blocking = ["reqwest/blocking"]

# ✅ 使用 rustls 代替 native-tls，推荐用于跨平台构建如 Android/iOS
rust-tls = ["reqwest/rustls-tls"]
rust-webpki = ["reqwest/rustls-tls-webpki-roots"]

# ⚠️ 如果你明确要禁用 openssl，就不要用 native-tls
native-tls = ["reqwest/native-tls"]

# ✅ 序列化支持（可选）
serde-support = []

# ✅ 使用 camelCase（可选）
serde-camelcase = ["serde-support"]
